1.app.js:appExtend.reloadAllWindows():  - refactored to reload sequantially via websocket or xhr 2.action/Form.js:formItemXMulticheck(item)  - added {columns: item.field.params.cols} 3.action/Row.js:  - row.focus(): fixed deferred focus 4.action/Rowset.js:  - gridColumnADeep(): column groups are not hidden by default anymore    and hidden-prop does not depend on inner columns hidden-prop anymore    so to hide the column group it can be just hidden with no need to set hidden    everything inside the group recursively 5.overrides/grid/Panel.js  - updateGridWidthUsageDiffOnDataChanged():    - fixed the way of how view instance is detected 6.app.css: fixed 'Hide all' problem 7.added images/icons/btn-icon-lime-(create|form).png

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -993,7 +993,6 @@ tr[data-boundview] + tr.x-grid-row .i-overflow {
     line-height: normal;
     font-size: 12px;
     max-height: 200px;
-    padding-top: 22px;
 }
 .i-notice, .i-notice-hideall {
     margin: 2px 2px 0 10px;
@@ -1612,6 +1611,7 @@ font[color][title] {
     cursor: pointer;
     display: none;
     position: fixed;
+    margin-bottom: 22px;
 }
 .i-notice + .i-notice + .i-notice-hideall {
     display: block;
